--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    <h1>About</h1>
+    <h1>{{title}}</h1>
     <img src="./img/IMG_1184.jpeg">
-    <p> Hi y'all I'm Dona Ferdinando, a cute Sri Lankan girl. Soon enough though I'll be a kiwi girl ;).</p>
+    <p> Hi y'all I'm {{name}}, a cute Sri Lankan girl. Soon enough though I'll be a kiwi girl ;).</p>
+
   </body>
 
 </html>
