--- a/views/help.hbs
+++ b/views/help.hbs
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    <h1>Help</h1>
+    <h1>{{title}}</h1>
+    <p>{{help_text}}</p>
   </body>
 
 </html>
