--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    <h1>{{title}}</h1>
+    {{>header}}
     <img src="./img/IMG_1184.jpeg">
     <p> Hi y'all I'm {{name}}, a cute Sri Lankan girl. Soon enough though I'll be a kiwi girl ;).</p>
 
