--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -4,10 +4,11 @@
 
   <head>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"></script>
   </head>
   <body>
-    <h1>{{title}}</h1>
-    <p>{{help_text}}</p>
+    {{>header}}
+    <p>Created by {{name}}</p>
   </body>
 
 </html>
