Add footer partial

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,8 +8,8 @@
   <body>
     {{>header}}
     <img src="./img/IMG_1184.jpeg">
-    <p> Hi y'all I'm {{name}}, a cute Sri Lankan girl. Soon enough though I'll be a kiwi girl ;).</p>
-
+    <p> Hi y'all I'm {{personName}}, a cute Sri Lankan girl. Soon enough though I'll be a kiwi girl ;).</p>
+    {{>footer}}
   </body>
 
 </html>
