--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -2,13 +2,17 @@
 
 <html>
 
-  <head>
-    <link rel="stylesheet" href="/css/styles.css">
-  </head>
-  <body>
+<head>
+  <title>Help</title>
+  <link rel="icon" href="/img/weather.png">
+  <link rel="stylesheet" href="/css/styles.css">
+</head>
+<body>
+  <div class="main-content">
     {{>header}}
     <p>{{help_text}}</p>
-    {{>footer}}
-  </body>
+  </div>
+  {{>footer}}
+</body>
 
 </html>
