--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,13 +2,20 @@
 
 <html>
 
-  <head>
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
-  </head>
-  <body>
+<head>
+  <title>Weather</title>
+  <link rel="icon" href="/img/weather.png">
+  <link rel="stylesheet" href="/css/styles.css">
+  <script src="/js/app.js"></script>
+</head>
+<body>
+  <div class="main-content">
     {{>header}}
-    {{>footer}}
-  </body>
+
+    <p>Use this for weather</p>
+  </div>
+
+  {{>footer}}
+</body>
 
 </html>
