Add another About text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,6 +14,9 @@
       <img class="portrait" src="/img/IMG_1184.jpeg">
     </div>
     <p> Hi y'all I'm {{personName}}, a cute Sri Lankan girl. Soon enough though I'll be a kiwi girl ;).</p>
+    <p> JK guys, I'm Ahmad Khan, and I made this site to learn NodeJS! It uses the Mapbox API to get geocode coordinates
+        for your provided location, and then uses the Weatherstack API to get weather information for your the coordinates.
+    </p>
   </div>
   {{>footer}}
 </body>
